--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,4 +9,45 @@
 * {
    margin: 0px;
    padding: 0px;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   box-sizing: border-box;
+}
+
+body, html {
+   background-color: #3F3D56;
+   height: 100vh;
+   width: 100vw;
+}
+
+main {
+   position: relative;
+   height: 100vh;
+   width: 100vw;
+}
+
+section#login {
+   /* Centralizar conteúdo*/
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   overflow: hidden;
+
+   background-color: white;
+   width: 250px;
+   height: 500px;
+   border-radius: 20px;
+   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.400);
+}
+
+section#login > div#imagem {
+   display: block;
+   background: #EA9CEF url(../images/login.svg) no-repeat;
+   background-size: contain;
+   height: 200px;
+}
+
+section#login > divformulario {
+   display: block;
+   padding: 10px;
 }
