--- a/assets/styles/media-query.css
+++ b/assets/styles/media-query.css
@@ -9,6 +9,10 @@ Grandes telas: acima de 1200px
 */
 
 @media screen and (min-width: 768px) and (max-width: 992px){
+   body {
+      background-image: linear-gradient(to top, #df2b52, #aa2773);
+   }
+   
    section#login {
       width: 80vw;
    }
@@ -23,5 +27,25 @@ Grandes telas: acima de 1200px
       float: right;
       width: 70%;
    }
+}
 
+@media screen and (min-width: 992px) {
+   body {
+      background-image: linear-gradient(to top, #df2b52, #aa2773);
+   }
+
+   section#login {
+      width: 950px;
+   }
+
+   section#login > div#imagem {
+      float: left;
+      width: 50%;
+      height: 100%;
+   }
+
+   section#login > div#formulario {
+      float: right;
+      width: 50%;
+   }
 }
