--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -41,6 +41,9 @@ section#login {
    height: 500px;
    border-radius: 20px;
    box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.400);
+
+   transition: width 0.3s, height 0.3s;
+   transition-timing-function: ease;
 }
 
 section#login > div#imagem {
