--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -67,3 +67,43 @@ div#formulario > h1 {
 div#formulario > p {
    font-size: 0.8em;
 }
+
+form > input[type=submit] {
+   display: block;
+   font-size: 1em;
+   width: 100%;
+   height: 40px;
+   background-color: #df2b52;
+   color: white;
+   border: none;
+   border-radius: 6px;
+}
+
+form > input[type=submit]:hover {
+   background-color: #ff2e5c;
+   cursor: pointer;
+}
+
+form > a.button {
+   display: block;
+   text-align: center;
+   font-size: 1em;
+   width: 100%;
+   height: 40px;
+   margin-top: 6px;
+   padding-top: 6px;
+   background-color: #3f42d3;
+   border: 1px solid #00000093;
+   border-radius: 6px;
+   text-decoration: none;
+   color: white;
+   padding-top: 5px;
+}
+
+form > a.button > i {
+   font-size: 1.1em;
+}
+
+form > a.button:hover {
+   background-color: #474afd;
+}
